# secunda-thp

./: .env  .example.env  .pre-commit-config.yml  Dockerfile  README.md  compose.yml  db.py  main.py  models.py  populate_test_data.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: ae5cd877a0b2_initial_models.py  b050606c1614_activity_depth_constraint.py  ecc0565595c0_geolocation_search.py  efb60c8169bc_create_text_search_index.py
infra/: Dockerfile  compose.yml
router/: organizations_router.py
secunda-thp/: main.py
secunda-thp/common/di/: services.py
secunda-thp/domain/organisation/: api.py  models.py  repositories.py  services.py
services/: organizations_service.py
